优化内存溢出代码