@@ -8,5 +8,13 @@ Java内存问题排查demo
 
 ```sh
 java -Xmx512m -jar target/memory-troubleshooting-springboot-0.0.1-SNAPSHOT.jar
+java \
+	-Xms1m \
+	-Xmx1m \
+	-XX:+PrintGC \
+	-XX:+HeapDumpOnOutOfMemoryError \
+	-XX:HeapDumpPath=./heap.bin \
+MemoryLeak
+
 ```
 
